[gd_scene load_steps=4 format=3 uid="uid://ckgr5pj0t4r5e"]

[ext_resource type="Script" path="res://game/person/perks/perk_menu/perk_choose/perk_choose.gd" id="1_avr0m"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_j7h2p"]
load_path = "res://.godot/imported/black.png-4c4c1270c1c2d6c3feef8b257b24f6ce.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6784e"]
load_path = "res://.godot/imported/perk_BARB.png-e847d5585e58b8f7c64e2603538299b0.ctex"

[node name="perk_choose" type="MarginContainer" groups=["info"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -73.5
offset_right = 60.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_avr0m")

[node name="Panel" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("CompressedTexture2D_j7h2p")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 200)
layout_mode = 2

[node name="PerkIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("CompressedTexture2D_6784e")

[node name="PerkName" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center][b]PerkName[/b][/center]"
fit_content = true

[node name="PerkDesc" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]PerkDesc[/center]"
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer" to="." method="_on_click"]
